# OpenCV-BBJB

./: README.md  test.cpp
Color_Detect/: CMakeCache.txt  Makefile  REDcolorMOV  cmake_install.cmake
cv_test/: CMakeCache.txt  DisplayImage.cpp  Makefile  cmake_install.cmake
face_detect/: CMakeCache.txt  CMakeLists.txt  FaceDetect  Makefile  cmake_install.cmake  test.cpp
motDetect/: KalmanFilter.h  arm_opencv.cpp  arm_opencv2.cpp  arm_opencv_cb  arm_opencv_cb.cpp  mpu6050_roll.cpp  test.cpp
